--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meetinglive.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meetinglive.html
@@ -33,13 +33,13 @@
                     </el-row>
                     <el-row class="el-row-h110">
                         <el-col :span="24">
-                            <el-form-item prop="desc" label="描述" style="margin:0;">
+                            <el-form-item prop="description" label="描述" style="margin:0;">
                                 <el-input
                                     clearable
                                     type="textarea"
                                     :autosize="{ minRows: 3, maxRows: 3}"
                                     placeholder="请输入报道专题描述"
-                                    v-model="meetingliveForm.desc"
+                                    v-model="meetingliveForm.description"
                                     :maxlength="200"
                                     auto-complete="on">
                                 </el-input>
