--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_live.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_live.html
@@ -406,13 +406,13 @@
                         </el-row>
                         <el-row class="el-row-h110">
                             <el-col :span="24">
-                                <el-form-item label="摘要" label-width="7%" prop="desc" style="margin:0;">
+                                <el-form-item label="摘要" label-width="7%" prop="description" style="margin:0;">
                                     <el-input
                                         clearable
                                         type="textarea"
                                         :autosize="{ minRows: 3, maxRows: 3}"
                                         maxlength="100"
-                                        v-model="meetingGuestForm.desc"
+                                        v-model="meetingGuestForm.description"
                                         auto-complete="off">
                                     </el-input>
                                 </el-form-item>
@@ -623,14 +623,14 @@
                         </el-row>
                         <el-row class="el-row-h110">
                             <el-col :span="24">
-                                <el-form-item label="摘要" label-width="7%" prop="desc" style="margin:0;">
+                                <el-form-item label="摘要" label-width="7%" prop="description" style="margin:0;">
                                     <el-input
                                         clearable
                                         type="textarea"
                                         :autosize="{ minRows: 3, maxRows: 3}"
                                         maxlength="100"
                                         :disabled="meetingPanelForm.isBigImg == 1"
-                                        v-model="meetingPanelForm.desc"
+                                        v-model="meetingPanelForm.description"
                                         auto-complete="off">
                                     </el-input>
                                 </el-form-item>
