--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meetinglivepage_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meetinglivepage_list.html
@@ -59,8 +59,8 @@
                         <div v-text="scope.row.name" @click="openUrlMeetingDetailPage(scope.row)" class="meetingDeatilStyle"></div>
                     </template>
                 </el-table-column>
-                <el-table-column prop="pcUrl" label="PC页面地址" width="180"></el-table-column>
-                <el-table-column prop="mobileUrl" label="H5页面地址" width="180"></el-table-column>
+                <!-- <el-table-column prop="pcUrl" label="PC页面地址" width="140"></el-table-column>
+                <el-table-column prop="mobileUrl" label="H5页面地址" width="140"></el-table-column> -->
                 <el-table-column prop="updateAt" label="更新时间" width="180"></el-table-column>
                 <el-table-column prop="modUserName" label="更新人" width="110"></el-table-column>
                 <el-table-column prop="publishStatus" label="状态"  width="150">
