--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meetinglive.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meetinglive.html
@@ -151,7 +151,7 @@
                                             placeholder="请输入以Http://开头的链接"
                                             v-model="item.picUrlPc"
                                             auto-complete="on"
-                                            @change="validateUrl">
+                                            @change="validateUrl2">
                                         </el-input>
                                     </el-form-item>
                                 </el-col>
@@ -187,7 +187,7 @@
                                             placeholder="请输入以Http://开头的链接"
                                             v-model="item.picUrlPc"
                                             auto-complete="on"
-                                            @change="validateUrl">
+                                            @change="validateUrl2">
                                         </el-input>
                                     </el-form-item>
                                     <el-form-item label="H5链接" label-width="10%" style="margin-top: 10px; margin-bottom:0px;">
@@ -198,7 +198,7 @@
                                             placeholder="请输入以Http://开头的链接"
                                             v-model="item.picUrlMobile"
                                             auto-complete="on"
-                                            @change="validateUrl">
+                                            @change="validateUrl2">
                                         </el-input>
                                     </el-form-item>
                                 </el-col>
