修改鼠标滑过背景色

--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_live.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_live.html
@@ -258,7 +258,6 @@
                         </el-col>
                     </el-row>
                 </div>
-
             </div>
             <!---------------- 创建会场结束 ---------------------->
 
@@ -336,7 +335,6 @@
                         </el-col>
                     </el-row>
                 </div>
-
             </div>
             <!---------------- 创建主题和模块结束 ---------------------->
 
@@ -450,8 +448,6 @@
                                 </el-form-item>
                             </el-col>
                         </el-row>
-
-
                     </el-form>
                     
                     <el-row style="margin-top: 30px">
@@ -462,8 +458,6 @@
                             <el-button type="primary" style="width: 100%" @click="closeCreatOrEditMeetingGuest('meetingGuestForm')">取消</el-button>
                         </el-col>
                     </el-row>
-
-
                 </div>
             </div>
             <!------------------ 创建嘉宾演讲模块结束 ----------------------->
@@ -524,9 +518,7 @@
                         layout="total, prev, pager, next, jumper"
                         :total="pagination4.totalCount">
                     </el-pagination>
-                </div>
-                
-                
+                </div> 
             </div>
             <!--------------------- 圆桌论坛模块结束 ---------------------------->
 
@@ -680,8 +672,6 @@
                             <el-button type="primary" style="width: 100%" @click="closeCreatOrEditMeetingPanel('meetingPanelForm')">取消</el-button>
                         </el-col>
                     </el-row>
-
-
                 </div>
             </div>
             <!------------------ 创建圆桌论坛模块结束 ----------------------->
@@ -736,11 +726,6 @@
                 </div>
             </el-dialog>
             <!--内容图库弹出层结束-->
-
-
-
-
-
         </div>
     </div>
 
@@ -774,10 +759,10 @@
     box-sizing: border-box;
 }
 .custom-tree-node:hover {
-    background: rgb(245, 247, 250);
+    background: #C0C0C0;
 }
 .custom-tree-node2:hover {
-    background: rgb(245, 247, 250);
+    background: #C0C0C0;
 }
 
 .fengmian_show{
