--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meetinglive.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meetinglive.html
@@ -402,12 +402,8 @@
                     </div>
 
                 </el-collapse-item>
-
-              
             </el-collapse>
             <!--折叠面板结束-->
-            
-
         </el-form>
             
         <!--按钮区-->
@@ -686,6 +682,9 @@
     height: 40px;
     color: #3F51B5;
     font-weight: 600;
+}
+#edit_meetinglive {
+    position: relative;
 }
 
 
