--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_live.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_live.html
@@ -145,7 +145,7 @@
                     <div class="meetingPlace" v-for="(item, index) in meetingliveDataTemp">
                         <div>
                             <span class="custom-tree-node">
-                                <span style="max-width:700px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 0, 0);font-weight: 700;" >会场：{{item.meetingPlaceTitle}}&nbsp;&nbsp;&nbsp;&nbsp;weight:{{item.weight}}</span>
+                                <span style="max-width:700px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 0, 0);font-weight: 700;"  v-text="'会场：'+ item.meetingPlaceTitle"></span>
                                 <div>
                                     <el-button type="text" size="mini" @click="addOrEditMeetingModel(0,item,index)">添加</el-button>
                                     <el-button type="text" size="mini" @click="addOrEditNewPlace(item)">属性</el-button>
@@ -155,11 +155,11 @@
                             </span>
                             <div v-if="item.children" v-for="(subItem, subIndex) in item.children">
                                 <span class="custom-tree-node2" >
-                                    <span style="width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;">主题标题：{{subItem.themTitle}}</span>
-                                    <span style="width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;">模块标题：{{subItem.modelTitle}}</span>
-                                    <span style="width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;">id:{{subItem.id}}&nbsp;&nbsp;&nbsp;&nbsp;weight: {{subItem.weight}}&nbsp;&nbsp;&nbsp;&nbsp;priority：{{subItem.priority}}</span>
-                                    <!-- <span style="width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;" v-if="subItem.type == 0">类型： 嘉宾演讲</span> -->
-                                    <!-- <span style="width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;" v-if="subItem.type == 1">类型： 圆桌论坛</span> -->
+                                    <span style="width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;" v-text="'主题标题：'+ subItem.themTitle"></span>
+                                    <span style="width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;" v-text="'模块标题：'+ subItem.modelTitle"></span>
+                                    <!-- <span style="width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;">id:{{subItem.id}}&nbsp;&nbsp;&nbsp;&nbsp;weight: {{subItem.weight}}&nbsp;&nbsp;&nbsp;&nbsp;priority：{{subItem.priority}}</span> -->
+                                    <span style="width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;" v-if="subItem.type == 0" v-text="'类型： 嘉宾演讲'"></span>
+                                    <span style="width:250px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;" v-if="subItem.type == 1" v-text="'类型： 圆桌论坛'"></span>
                                     <div>
                                         <el-button type="text" size="mini" @click="addOrEditMeetingDetail(subItem)">编辑</el-button>
                                         <el-button type="text" size="mini" @click="addOrEditMeetingModel(1,item,subIndex)">属性</el-button>
