鼠标滑过颜色

--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_live.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_live.html
@@ -769,11 +769,20 @@
     box-sizing: border-box;
 }
 .custom-tree-node:hover {
-    background: #C0C0C0;
+    background: rgb(31, 1, 139);
+   
 }
+.custom-tree-node:hover span {
+    color: #fff !important;
+}
+
 .custom-tree-node2:hover {
-    background: #C0C0C0;
+    background: rgb(31, 1, 139);
 }
+.custom-tree-node2:hover span {
+    color: #fff !important;
+}
+
 
 .fengmian_show{
     width: 100px;
