--- a/webapps/ROOT/WEB-INF/classes/templates/modules/content/special_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/content/special_list.html
@@ -60,7 +60,7 @@
                         </template>
                     </el-table-column>
                     <el-table-column prop="newsCount" label="文章数" width="110"></el-table-column>
-                    <el-table-column prop="" label="更新人" width="110"></el-table-column>
+                    <el-table-column prop="modUserName" label="更新人" width="110"></el-table-column>
                     <el-table-column prop="subjectModTime" label="更新时间" width="95"></el-table-column>
                     <el-table-column prop="subjectPriority" label="专题优先级" width="90"></el-table-column>
                     <el-table-column label="操作" width="150" fixed="right">
