--- a/webapps/ROOT/WEB-INF/classes/templates/modules/sys/previewArticle.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/sys/previewArticle.html
@@ -13,17 +13,17 @@
     <!--SEO优化-->
     <meta name="description" content="投中网是中国股权投资行业主流信息门户。隶属于投中信息（股票代码：835562）。网站致力于连接人、信息与资产，为所有关注私募股权行业的用户提供专业的资讯、数据、研究、会议等。关注网站请访问：www.chinaventure.com.cn">
     <meta name="keywords" content="投中网,ChinaVenture,投中,风险投资,私募股权投资,股权投资,投行,VC,PE,私募股权基金,风投, Venture Capital,创业,融资,商业计划书">
-    <link rel="icon" href="https://www.chinaventure.com.cn/images/logo/logo_tiny.png" sizes="30x30">
+    <link rel="icon" href="https://www.cvmedia.com.cn/images/logo/logo_tiny.png" sizes="30x30">
     <!--css-->
-    <link rel="stylesheet" href="https://www.chinaventure.com.cn/css/reset.v1.css">
-    <link rel="stylesheet" href="https://www.chinaventure.com.cn/css/common.css">
-    <link rel="stylesheet" href="https://www.chinaventure.com.cn/css/inc_pc.css">
-    <link rel="stylesheet" href="https://www.chinaventure.com.cn/css/page/articledetail.css">
+    <link rel="stylesheet" href="https://www.cvmedia.com.cn/css/reset.v1.css">
+    <link rel="stylesheet" href="https://www.cvmedia.com.cn/css/common.css">
+    <link rel="stylesheet" href="https://www.cvmedia.com.cn/css/inc_pc.css">
+    <link rel="stylesheet" href="https://www.cvmedia.com.cn/css/page/articledetail.css">
     <!--js-->
-    <script type="text/javascript" src="https://www.chinaventure.com.cn/js/utils.js"></script>
-    <script type="text/javascript" src="https://www.chinaventure.com.cn/js/jquery-3.0.0.min.js"></script>
-    <script type="text/javascript" src="https://www.chinaventure.com.cn/js/common.js"></script>
-    <script type="text/javascript" src="https://www.chinaventure.com.cn/js/vue.min@2.5.16.js"></script>
+    <script type="text/javascript" src="https://www.cvmedia.com.cn/js/utils.js"></script>
+    <script type="text/javascript" src="https://www.cvmedia.com.cn/js/jquery-3.0.0.min.js"></script>
+    <script type="text/javascript" src="https://www.cvmedia.com.cn/js/common.js"></script>
+    <script type="text/javascript" src="https://www.cvmedia.com.cn/js/vue.min@2.5.16.js"></script>
 </head>
 
 <body>
@@ -66,7 +66,7 @@
                     </div>
                     <!--二维码区-->
                     <div class="articledetail_ercode_pc">
-                        <img class="ercode" src="https://www.chinaventure.com.cn//images/article_ercode.png">
+                        <img class="ercode" src="https://www.cvmedia.com.cn/images/article_ercode.png">
                         <p>第一时间获取股权投资行业新鲜资讯和深度商业分析，请在微信公众账号中搜索投中网，或用手机扫描左侧二维码，即可获得投中网每日精华内容推送。</p>
                     </div>
                     
