--- a/webapps/ROOT/WEB-INF/classes/templates/modules/content/interview_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/content/interview_list.html
@@ -57,8 +57,8 @@
                     </el-table-column>
                     <el-table-column prop="visitName" label="姓名" width="100"></el-table-column>
                     <el-table-column prop="visitCompany" label="公司/职位" width="170"></el-table-column>
-                    <el-table-column prop="visitTitle" label="标题" width="300"></el-table-column>
-                    <el-table-column prop="visitTime" label="显示时间" width="200"></el-table-column>
+                    <el-table-column prop="visitTitle" label="标题" width=""></el-table-column>
+                    <el-table-column prop="visitTime" label="显示时间" width="190"></el-table-column>
                     <el-table-column label="操作" width="150" fixed="right">
                         <template slot-scope="scope">
                             <el-button type="text" size="small" @click="creatOrEditInterview(scope.row)">修改</el-button>
