--- a/webapps/ROOT/WEB-INF/classes/templates/modules/signup/guest_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/signup/guest_list.html
@@ -68,7 +68,7 @@
                     <el-table-column prop="customerCity" label="城市" width="90"></el-table-column>
                     <el-table-column prop="customerPhone" label="手机号" width="120"></el-table-column>
                     <el-table-column prop="customerSale" label="所属销售" width="90"></el-table-column>
-                    <el-table-column prop="customerStatus" label="跟踪状态" width="250">
+                    <el-table-column prop="customerStatus" label="跟踪状态" width="">
                         <template slot-scope="scope">
                             <div class="twolineobv" v-text="scope.row.customerStatus"></div>
                         </template>
