--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
@@ -259,7 +259,7 @@
                                                         <el-input
                                                             clearable
                                                             type="text"
-                                                            :disabled="true"
+                                                            :disabled="false"
                                                             placeholder="条目标题"
                                                             v-model="item5.labelText"
                                                             auto-complete="off"></el-input>
