--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
@@ -233,7 +233,7 @@
                                                         start-placeholder="开始时间"
                                                         end-placeholder="结束时间"
                                                         placeholder="选择时间范围"
-                                                        :clearable="false">
+                                                        :clearable="true">
                                                     </el-time-picker>
                                                 </el-form-item>
                                             </el-col>
