--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/cvyear_2019.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/cvyear_2019.html
@@ -279,7 +279,7 @@
                                 </el-input>
                             </el-form-item>
                         </el-col>
-                        <el-col class="el-row-h40" :offset="1" :span="13">请到<b style="color: #175CE9;">机构管理—会议机构</b>中配置相关内容，本次会议的会议编号为：<b style="color: #175CE9;">1</b></el-col>
+                        <el-col class="el-row-h40" :offset="1" :span="13">请到<b style="color: #175CE9;">会议机构</b>中配置相关内容，本次会议的会议编号为：<b style="color: #175CE9;">1</b></el-col>
                     </el-row>
                 </el-collapse-item>
 
